@@ -1,11 +1,10 @@
 package com.thaimei.myapp.security;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-
 import java.util.Collection;
-import java.util.Collections;
-
-import com.thaimei.myapp.model.User;   
+import com.thaimei.myapp.model.User;  
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import java.util.List; 
 
 
 public class CustomUserDetails implements UserDetails {
@@ -28,7 +27,7 @@ public class CustomUserDetails implements UserDetails {
     }
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole()));
     }
     @Override
     public boolean isAccountNonExpired() {
